loading home on redirection fixed banner edition process fixed text overflow added in card title for banners banner message updated

--- a/src/app/components/admin/banners/banners.component.scss
+++ b/src/app/components/admin/banners/banners.component.scss
@@ -63,10 +63,15 @@ h3 {
           font-weight: bold;
         }
       }
-
+      .card__body__message {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        width: 100%;
+      }
       .card__body__message,
       .menu-icon {
-        font-family: 'Gotham';
+        font-family: "Gotham";
         font-size: 18px;
         line-height: 18px;
         color: #707782;
